@startuml
!theme monochrome
skinparam backgroundColor #1a1a24
skinparam classBackgroundColor #1e1e32
skinparam classBorderColor #667eea
skinparam classFontColor white
skinparam classHeaderBackgroundColor #2d2d3a
skinparam arrowColor #667eea
skinparam noteBackgroundColor #2d2d3a
skinparam noteBorderColor #764ba2
skinparam noteFontColor white
skinparam sequenceActorBorderColor #667eea
skinparam sequenceActorBackgroundColor #2d2d3a
skinparam sequenceActorFontColor white
skinparam sequenceLifeLineBorderColor #667eea
skinparam sequenceLifeLineBackgroundColor #1e1e32

title "Liskov Substitution Principle (LSP)\nOmniTech - Los subtipos son intercambiables"

class "OrderService" as Service {
    + procesar_pago(order_id, carrito_temp)
}

abstract class "Product" as Product {
    + {abstract} procesar_venta(cantidad): bool
}

class PhysicalProduct {
    + procesar_venta(cantidad): bool
}

class DigitalLicense {
    + procesar_venta(cantidad, orden): bool
}

Product <|-- PhysicalProduct
Product <|-- DigitalLicense

Service --> Product : usa polimórficamente

note right of Service : código en services.py:66-69\nproducto = ProductFactory.obtener_producto_con_lock(tipo, id)\nproducto.procesar_venta(cantidad)\n\n¡MISMA llamada para ambos tipos!

note left of PhysicalProduct : procesar_venta(5)\n→ confirma 5 unidades de stock

note left of DigitalLicense : procesar_venta(5)\n→ consume 5 claves disponibles

@enduml
